--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <main>
     <section class="images">
       <img src="images/image1.jpg.jpeg" alt="movie post1">
-      <img src="images/image2.jpg.jpeg" alt="movie post2">
+      <img src="https://github.com/Hussein-tech-bot/MovieHub/blob/main/images/image2.jpg.jpeg" alt="movie post2">
       <img src="images/image3.jpg.jpeg" alt=" movie post3">
     </section>
   </main>
@@ -135,3 +135,4 @@
   
 </body>
 </html>
+
