--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <main>
     <section class="images">
-      <img src="images/image1.jpg.jpeg" alt="movie post1">
+      <img src="https://github.com/Hussein-tech-bot/MovieHub/blob/main/images/image1.jpg.jpeg" alt="movie post1">
       <img src="https://github.com/Hussein-tech-bot/MovieHub/blob/main/images/image2.jpg.jpeg" alt="movie post2">
       <img src="images/image3.jpg.jpeg" alt=" movie post3">
     </section>
@@ -135,4 +135,5 @@
   
 </body>
 </html>
+
 
