--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section class="images">
       <img src="https://github.com/Hussein-tech-bot/MovieHub/blob/main/images/image1.jpg.jpeg" alt="movie post1">
       <img src="https://github.com/Hussein-tech-bot/MovieHub/blob/main/images/image2.jpg.jpeg" alt="movie post2">
-      <img src="images/image3.jpg.jpeg" alt=" movie post3">
+      <img src="https://github.com/Hussein-tech-bot/MovieHub/blob/main/images/image3.jpg.jpeg" alt=" movie post3">
     </section>
   </main>
 
@@ -135,5 +135,6 @@
   
 </body>
 </html>
+
 
 
